--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "DIO.ME challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dist": "tsup src",
+    "start:dev": "tsx src/server.ts",
+    "start:watch": "tsx watch src/server.ts",
+    "start:dist" : "npm run dist && node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
