--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "dist": "tsup src",
     "start:dev": "tsx src/server.ts",
     "start:watch": "tsx watch src/server.ts",
-    "start:dist" : "npm run dist && node dist/src/index.js"
+    "start:dist": "npm run dist && node dist/src/index.js"
+ 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "tsup": "^8.1.0",
     "tsx": "^4.16.0",
     "typescript": "^5.5.2"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
