--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "desafio-dio-nodejs-api-champions-league",
   "version": "1.0.0",
   "description": "DIO.ME challenge",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dist": "tsup src",
     "start:dev": "tsx --env-file=.env src/server.ts",
     "start:watch": "tsx watch --env-file=.env src/server.ts",
-    "start:dist": "npm run dist && node dist/src/index.js"
+    "start:dist": "npm run dist && node --env-file=.env dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "tsup": "^8.1.0",
     "tsx": "^4.16.0",
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
